--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.15",
     "typescript": "^5.6.3",
+    "web-ext-run": "^0.2.2",
     "wxt": "^0.19.13"
   }
 }
